# BetaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Beta_Engine/: Beta.cpp  Beta.h  Beta_Engine.h  CMakeLists.txt  Math.h  TestApp.cpp
Beta_Engine/Components/: Block.cpp  Block.h  ChunkMesh.cpp  ChunkMesh.h  Component.cpp  Component.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h
Beta_Engine/Core/: Engine.cpp  Engine.h  Window.cpp  Window.h
Beta_Engine/Physics/: Collider.cpp  Collider.h  IntersectData.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsEngine.cpp  PhysicsEngine.h  PlaneCollider.cpp  PlaneCollider.h  SphereCollider.cpp  SphereCollider.h
Beta_Engine/Renderer/: EBO.cpp  EBO.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Beta_Engine/Scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  World.cpp  World.h
Beta_Engine/Utils/: MousePicker.cpp  MousePicker.h  Noise.cpp  Noise.h
assets/shaders/: shader.frag  shader.vert
